# localtalk-android

./: settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/kotlin/com/localtalk/ime/: KeyboardView.kt  LocalTalkIME.kt
app/src/main/kotlin/com/localtalk/settings/: SettingsActivity.kt
app/src/main/kotlin/com/localtalk/transcription/: WhisperJNI.kt  WhisperTranscriber.kt
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: method.xml
gradle/: libs.versions.toml
